--- a/Web/src/pages/config/index.less
+++ b/Web/src/pages/config/index.less
@@ -1,4 +1,4 @@
-.home {
+.config {
     width: 100%;
     height: 100%;
     margin: 0;
@@ -6,4 +6,19 @@
     color: white;
     background: url("../../../public/bg1.jpg") no-repeat center center fixed;
     background-size: cover;
+}
+.body {
+    height: calc(100% - 68px);
+    width: 100%;
+    display: flex;
+    .sidebar {
+        height: 100%;
+        background-color: green;
+        
+    }
+    .views {
+        width: calc(100% - 256px);
+        height: 100%;
+        background-color: pink;
+    }
 }
